--- a/Assignment/std/profile.html
+++ b/Assignment/std/profile.html
@@ -59,18 +59,18 @@
 
                         <div class="profile_section">
                             <div class="profile_section_1">
-                                <h3>ชื่อ-สกุล</h3><input type="text" readonly>
+                                <h3>ชื่อ-สกุล</h3><input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                             </div>
 
                             <div class="profile_section_2">
                                 <div class="profile_section_2_1">
-                                    <h3>รหัสนักศึกษา</h3><input type="text" readonly>
-                                    <h3>ประเภทโครงงาน</h3><input type="text" readonly>
+                                    <h3>รหัสนักศึกษา</h3><input type="text" readonly placeholder="6806022511145">
+                                    <h3>ประเภทโครงงาน</h3><input type="text" readonly placeholder="โครงงานพิเศษ">
                                 </div>
 
                                 <div class="profile_section_2_1">
-                                    <h3>สาขาวิชา</h3><input type="text" readonly>
-                                    <h3>จำนวนสมาชิก</h3><input type="text" readonly>
+                                    <h3>สาขาวิชา</h3><input type="text" readonly placeholder="INET">
+                                    <h3>จำนวนสมาชิก</h3><input type="text" readonly placeholder="2 คน">
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
 
                             <div class="profile_footer_2">
                                 <div class="profile_footer_img"><img src="../img/LOGO-KMUTNB--300x300.png" alt="profile_2"></div>
-                                <div class="profile_footer_input"><input type="text" readonly><br><input type="text" readonly></div>
+                                <div class="profile_footer_input"><input type="text" readonly placeholder="นางสาวชัชชดาภา โค้วสุขสกุล"><br><input type="text" readonly placeholder="6806022510416"></div>
                             </div>
                         </div>
                     </div>
