--- a/Assignment/login/register.html
+++ b/Assignment/login/register.html
@@ -14,6 +14,7 @@
             </div>
             <div class="log_input">
                 <h4>กรอกรหัสนักศึกษา</h4><input type="text">
+                <h4>อีเมลนักศึกษา</h4><input type="text">
                 <h4>สร้างรหัสผ่าน</h4><input type="password">
                 <h4>ยืนยันรหัสผ่าน</h4><input type="password">
                 <h4>จำนวนสมาชิก</h4>
