--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -44,7 +44,39 @@
                     <a href="results.html">ผลการสอบ</a>
                 </div>
                 <div class="info_all">
-                    
+                    <div class="proposal_sub">
+                        <div class="proposal_sub_head">
+                            <h1>Project</h1>
+                            <h3>Proposal Submission</h3>
+                        </div>
+                        <div class="proposal_sub_section">
+                            <h4>เลือกประเภทโครงงาน</h4>
+                            <select name="" id="">
+                                <option value="">โครงงานพิเศษ</option>
+                                <option value="">โครงงานสหกิจ</option>
+                            </select>
+                            <h4>รายละเอียดโครงงาน</h4><br>
+                            <h5>ชื่อโครงงาน:</h5>
+                            <input type="text">
+                            <h5>ชื่อโครงงาน (ภาษาอังกฤษ):</h5>
+                            <input type="text">
+                            <h5>วัตถุประสงค์:</h5>
+                            <input type="text" placeholder="ข้อ 1">
+                            <input type="text" placeholder="ข้อ 2">
+                            <input type="text" placeholder="ข้อ 3">
+                            <h5>ขอบเขตงาน:</h5>
+                            <input type="text" placeholder="ข้อ 1">
+                            <input type="text" placeholder="ข้อ 2">
+                            <input type="text" placeholder="ข้อ 3">
+                            <h4>อาจารย์ที่ปรึกษา</h4>
+                            <select name="" id="">
+                                <option value="">รศ.ดร.อนิราช มิ่งขวัญ</option>
+                                <option value="">ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</option>
+                                <option value="">ผส.ดร.นิติการ นาคเจือทอง</option>
+                            </select>
+                            <button class="proposal_sub_bt">ยืนยัน</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
