--- a/Assignment/login/login.html
+++ b/Assignment/login/login.html
@@ -16,13 +16,24 @@
                 <h4>รหัสนักศึกษา</h4><input type="text">
                 <h4>รหัสผ่าน</h4><input type="password">
                 <h4>เลือกบทบาท</h4>
-                <select name="" id="">
-                    <option value="">นักศึกษา (Student)</option>
+                <select name="" id="pageselect">
+                    <option value="../std/profile.html">นักศึกษา (Student)</option>
                     <option value="">อาจารย์ที่ปรึกษา (#)</option>
                     <option value="">อาจารย์ประจำวิชา (#)</option>
                     <option value="">กรรมการ (#)</option>
                 </select>
-                <a href="../std/profile.html" class="log_btc">ตกลง</a>
+                <button class="log_btc" onclick="gopage()">ตกลง</button>
+                <script>
+                    function gopage(){
+                        var select = document.getElementById("pageselect");
+                        var page = select.value;
+                        if (page) {
+                            window.location.href = page;
+                        }else{
+                            alert("กรุณาเลือกบทบาท")
+                        }
+                    }
+                </script>
                 <a href="register.html" class="log_btregis">ลงทะเบียน</a>
                 <a href="#">ลืมรหัสผ่าน</a>
             </div>
