--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -44,7 +44,120 @@
                     <a href="results.html">ผลการสอบ</a>
                 </div>
                 <div class="info_all">
-                    
+                    <div class="progress">
+                        <h4>ความก้าวหน้าโครงงาน</h4>
+                        <div class="progress_1">
+                            <div class="progress_2"></div>
+                        </div><h5>ความก้าวหน้าโดยรวม: 40%</h5>
+
+
+
+                        <h4>รายงานความก้าวหน้ารายสัปดาห์</h4>
+
+
+                        <div class="progress_all">
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 1</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 2</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 3</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 4</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 5</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 6</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 7</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 8</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 9</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                            <div class="progress_all_">
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 10</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <p>รายละเอียดงานที่ทำ</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
+                                <textarea name="" id=""></textarea>
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <input type="file">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
