--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -61,9 +61,9 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
@@ -71,9 +71,9 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
@@ -81,9 +81,9 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
@@ -91,69 +91,69 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 5</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 5</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 6</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 6</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 7</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 7</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 8</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 8</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 9</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 9</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 10</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 10</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
-                                <textarea name="" id=""></textarea>
+                                <textarea name="" id="" readonly></textarea>
                                 <input type="file">
                             </div>
                         </div>
