--- a/Assignment/login/login.html
+++ b/Assignment/login/login.html
@@ -13,14 +13,14 @@
                 <h1>Login</h1>
             </div>
             <div class="log_input">
-                <h4>รหัสนักศึกษา</h4><input type="text">
+                <h4>อีเมล</h4><input type="text">
                 <h4>รหัสผ่าน</h4><input type="password">
                 <h4>เลือกบทบาท</h4>
                 <select name="" id="pageselect">
                     <option value="../std/profile.html">นักศึกษา (Student)</option>
-                    <option value="">อาจารย์ที่ปรึกษา (#)</option>
-                    <option value="">อาจารย์ประจำวิชา (#)</option>
-                    <option value="">กรรมการ (#)</option>
+                    <option value="../consultant/profile.html">อาจารย์ที่ปรึกษา (#)</option>
+                    <option value="../subject/profile.html">อาจารย์ประจำวิชา (#)</option>
+                    <option value="../director/profile.html">กรรมการ (#)</option>
                 </select>
                 <button class="log_btc" onclick="gopage()">ตกลง</button>
                 <script>
