--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -65,6 +65,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 2</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
@@ -75,6 +76,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 3</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
@@ -85,6 +87,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 4</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
@@ -95,6 +98,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 5</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -105,6 +109,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 6</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -115,6 +120,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 7</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -125,6 +131,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 8</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -135,6 +142,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 9</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -145,6 +153,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
                                 <div class="progress_all_1"><h3>สัปดาห์ที่ 10</h3><div class="progress_all_2">สำเร็จ 0%</div></div>
@@ -155,6 +164,7 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <textarea name="" id="" readonly></textarea>
                                 <input type="file">
+                                <button>บันทึก</button>
                             </div>
                         </div>
                     </div>
