--- a/Assignment/std/proposal_status.html
+++ b/Assignment/std/proposal_status.html
@@ -44,7 +44,74 @@
                     <a href="results.html">ผลการสอบ</a>
                 </div>
                 <div class="info_all">
-                    
+
+
+
+                    <div class="proposal_status">
+
+
+                        <div class="proposal_status_head">
+                            <h1>Project</h1>
+                            <h3>Proposal Status</h3>
+                        </div>
+
+
+                        <div class="proposal_status_section">
+                            <h3>สถานะการยื่นสอบหัวข้อ</h3>
+                            <div class="proposal_status_section_">
+                                <h4>กำหนดวันสอบ</h4>
+                                <input type="date"><br>
+                                <button>ยืนยันการสอบ</button>
+                                <h4>สถานะการยืนยันสอบหัวข้อ</h4>
+                                <div class="proposal_status_section_1">รอการอนุมัติ</div>
+                                <h4>โดย กรรมการคุมสอบหัวข้อ</h4>
+
+
+                                <div>
+                                    กรรมการคนที่ 1 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
+                                    กรรมการคนที่ 2 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
+                                    กรรมการคนที่ 3 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ">
+                                </div>
+
+
+                                <h4>วัน/เวลา/สถานที่</h4>
+
+
+                                <div class="proposal_status_section_2">
+                                    วันที่<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
+                                    เวลา<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
+                                    สถานที่<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
+                                    หมายเหตุ<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ">
+                                </div>
+                            </div>
+
+
+                            <h3>ผลการสอบหัวข้อ</h3>
+                            <div class="proposal_status_section_">
+                                <h4>สถานะผลการสอบ</h4>
+                                <div class="proposal_status_section_1">รอผลการสอบ</div>
+                                <h4>ข้อเสนอแนะจากกรรมการ</h4>
+                                <textarea name="" id="" readonly></textarea>
+                            </div>
+
+
+                            <h3>ส่งแบบแก้ไขโครงงาน</h3>
+                                <div class="proposal_status_4">
+                                    <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                    </label>
+                                    <button>ส่งแก้ไข</button>
+                                </div>
+                        </div>
+
+
+                    </div>
+
+
+
+
+
                 </div>
             </div>
         </div>
