--- a/Assignment/login/register.html
+++ b/Assignment/login/register.html
@@ -15,6 +15,15 @@
             <div class="log_input">
                 <h4>กรอกรหัสนักศึกษา</h4><input type="text">
                 <h4>อีเมลนักศึกษา</h4><input type="text">
+                <h4>สาขา</h4>
+                <select name="" id="">
+                    <option value=""></option>
+                    <option value="">IT</option>
+                    <option value="">ITI</option>
+                    <option value="">ITT</option>
+                    <option value="">INE</option>
+                    <option value="">INET</option>
+                </select>
                 <h4>สร้างรหัสผ่าน</h4><input type="password">
                 <h4>ยืนยันรหัสผ่าน</h4><input type="password">
                 <h4>จำนวนสมาชิก</h4>
