--- a/Assignment/std/exam_regis.html
+++ b/Assignment/std/exam_regis.html
@@ -44,7 +44,44 @@
                     <a href="results.html">ผลการสอบ</a>
                 </div>
                 <div class="info_all">
-                    
+                    <div class="exam_regis">
+                        <div class="exam_regis_head">
+                            <h1>Final Exam</h1>
+                            <h2>Registration</h2>
+                        </div>
+                        <h3>กรอกข้อมูลโครงงาน</h3>
+                        <div class="exam_regis_section_1">
+                            <h4>เลือกประภทโครงงาน</h4>
+                            <select name="" id="">
+                                <option value="">โครงงานพิเศษ</option>
+                                <option value="">โครงงานสหกิจ</option>
+                            </select>
+                            <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                            <input type="text">
+                            <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                            <input type="text">
+                            <h4>เลือกวันสอบ:</h4>
+                            <input type="date">
+                        </div>
+
+
+
+                        <h3>อัปโหลดไฟล์เล่มโครงงานและสไลด์นำเสนอ</h3>
+                        <div  class="exam_regis_section_2">
+                            ไฟล์เล่มโครงงาน(PDF)
+                            <label>
+                                คลิกที่นี่เพื่ออัปโหลดไฟล์ PDF
+                                <input type="file">
+                            </label><br>
+                            ไฟล์สไลด์นำเสนอ(PDF)
+                            <label>
+                                คลิกที่นี่เพื่ออัปโหลดไฟล์ PDF
+                                <input type="file">
+                            </label>
+                        </div>
+                        <button>ยืนยันการสอบ</button>
+
+                    </div>
                 </div>
             </div>
         </div>
