--- a/Assignment/consultant/consultant2.html
+++ b/Assignment/consultant/consultant2.html
@@ -44,6 +44,7 @@
 
 
                 <div class="info_all">
+                    <h3 class="consultant2_h3">รายชื่อผู้ร้องขอให้ดูแล</h3>
                      <div class="consultant_home_1">
                             <div class="consultant_home_1_1">
                                 <div class="consultant_home_1_1_1">
@@ -71,7 +72,36 @@
                                 </div>
                             </div>
 
-                            <div class="consultant_home_1_2"><button>ยอมรับ</button><button>ไม่ยอมรับ</button></div>
+                            <div class="consultant_home_1_2"><button class="consultant2_bt_cf">ยอมรับ</button><button class="consultant2_bt_cc">ไม่ยอมรับ</button></div>
+                        </div>
+                        <div class="consultant_home_1">
+                            <div class="consultant_home_1_1">
+                                <div class="consultant_home_1_1_1">
+                                    <h4>ประเภทโครงงาน</h4>
+                                    <input type="text" readonly placeholder="โครงงานพิเศษ">
+                                    <h4>จัดทำโดย</h4>
+                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
+                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
+                                </div>
+                                <div class="consultant_home_1_1_2">
+                                    <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <h4>วัตถุประสงค์:</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <input type="text" readonly placeholder="">
+                                    <input type="text" readonly placeholder="">
+                                    <h4>ขอบเขตงาน:</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <input type="text" readonly placeholder="">
+                                    <input type="text" readonly placeholder="">
+                                </div>
+                            </div>
+
+                            <div class="consultant_home_1_2"><button class="consultant2_bt_cf">ยอมรับ</button><button class="consultant2_bt_cc">ไม่ยอมรับ</button></div>
                         </div>
                 </div>
 
