--- a/Assignment/consultant/profile.html
+++ b/Assignment/consultant/profile.html
@@ -160,8 +160,7 @@
                     <div id="consultant_home2_progress1" class="page">
                         <div class="consultant1_home2_progress">
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
-                            <div class="consultant_progress_head"><h2>ตรวจสอบความก้าวหน้า</h2></div>
-                            <h3>รายงานความก้าวหน้ารายสัปดาห์</h3>
+                            <div class="consultant_progress_head"><h2>ตรวจสอบความก้าวหน้า</h2></div><br>
                             <div class="consultant_progress_1">
                                 <div class="consultant_progress_1_left">
                                     <div class="consultant_progress_1_left_top">
@@ -377,8 +376,7 @@
                     <div id="consultant_home2_progress2" class="page">
                         <div class="consultant1_home2_progress">
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
-                            <div class="consultant_progress_head"><h2>ตรวจสอบความก้าวหน้า</h2></div>
-                            <h3>รายงานความก้าวหน้ารายสัปดาห์</h3>
+                            <div class="consultant_progress_head"><h2>ตรวจสอบความก้าวหน้า</h2></div><br>
                             <div class="consultant_progress_1">
                                 <div class="consultant_progress_1_left">
                                     <div class="consultant_progress_1_left_top">
