--- a/Assignment/consultant/consultant2.html
+++ b/Assignment/consultant/consultant2.html
@@ -17,19 +17,19 @@
                 <div class="dachbord_txt"><h2>📊 แดชบอร์ดโครงงานนักศึกษา</h2></div>
                 <div class="dachbord_all">                
                     <div class="dachbord_all_d">
-                        <p>โครงงานทั้งหมด</p><br>
+                        <p>โครงงานทั้งหมด</p>
                         <h2>156</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>กำลังดำเนินการ</p><br>
+                        <p>กำลังดำเนินการ</p>
                         <h2>89</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>รอสอบจบ</p><br>
+                        <p>รอสอบจบ</p>
                         <h2>23</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>สำเร็จแล้ว</p><br>
+                        <p>สำเร็จแล้ว</p>
                         <h2>44</h2>
                     </div>            
                 </div>
