--- a/Assignment/login/index.html
+++ b/Assignment/login/index.html
@@ -31,19 +31,19 @@
        </div>
        <div class="s_index2">
             <div class="s_index2_all">
-                <p>โครงงานทั้งหมด</p><br>
+                <p>โครงงานทั้งหมด</p>
                 <h2>156</h2>
             </div>
             <div class="s_index2_all">
-                <p>กำลังดำเนินการ</p><br>
+                <p>กำลังดำเนินการ</p>
                 <h2>89</h2>
             </div>
             <div class="s_index2_all">
-                <p>รอสอบจบ</p><br>
+                <p>รอสอบจบ</p>
                 <h2>23</h2>
             </div>
             <div class="s_index2_all">
-                <p>สำเร็จแล้ว</p><br>
+                <p>สำเร็จแล้ว</p>
                 <h2>44</h2>
             </div>
            
