--- a/Assignment/std/profile.html
+++ b/Assignment/std/profile.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student</title>
     <link rel="stylesheet" href="../css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
         <div>
@@ -17,19 +20,19 @@
                 <div class="dachbord_txt"><h2>📊 แดชบอร์ดโครงงานนักศึกษา</h2></div>
                 <div class="dachbord_all">                
                     <div class="dachbord_all_d">
-                        <p>โครงงานทั้งหมด</p><br>
+                        <p>โครงงานทั้งหมด</p>
                         <h2>156</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>กำลังดำเนินการ</p><br>
+                        <p>กำลังดำเนินการ</p>
                         <h2>89</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>รอสอบจบ</p><br>
+                        <p>รอสอบจบ</p>
                         <h2>23</h2>
                     </div>
                     <div class="dachbord_all_d">
-                        <p>สำเร็จแล้ว</p><br>
+                        <p>สำเร็จแล้ว</p>
                         <h2>44</h2>
                     </div>            
                 </div>
